# geosurrogate

./: .dockerignore  .gitignore  ARQUITECTURA.md  CLAUDE.md  Dockerfile  ESTADO.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: Home.py
app/i18n/: en.json  es.json
app/pages/: 1_Model.py  2_Variables.py  3_Distributions.py  4_DoE.py  5_Training.py  6_Validation.py  7_Exploitation.py  8_Report.py
demo_cases/: registry.yaml
demo_cases/embankment_3d/: case.yaml  lookup.csv
demo_cases/embankment_4d/: case.yaml  lookup.csv
demo_cases/slope_2d/: case.yaml  lookup.csv
deploy/hf-space/: DEPLOY.md  Dockerfile  README.md
examples/: embankment_3d.yaml
src/geosurrogate/: __init__.py  cli.py  config.py  project.py  rs2_detect.py
src/geosurrogate/activelearning/: __init__.py  loop.py  runner.py
src/geosurrogate/doe/: __init__.py  core.py
src/geosurrogate/exploitation/: __init__.py  montecarlo.py  sampling.py
src/geosurrogate/reporting/: __init__.py  figures.py  report.py
src/geosurrogate/solvers/: __init__.py  base.py  demo.py  rs2.py
src/geosurrogate/surrogate/: __init__.py  r_bridge.py
src/geosurrogate/surrogate/r/: fit_predict_alc.R
src/geosurrogate/ui/: __init__.py  common.py  wizard.py
src/geosurrogate/validation/: __init__.py  data.py  ks.py  loocv.py  massive.py  testset.py
tests/: test_capabilities.py  test_config.py  test_doe.py  test_e2e_demo.py  test_ks_resolution.py  test_next_step.py  test_rs2_detect.py  test_rs2_lifecycle.py  test_sampling.py  test_testset.py  test_testset_control.py  test_ui_smoke.py  test_wizard.py
tools/: build_demo_cases.py  build_python_bundle.py  build_r_bundle.py
